--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "https://heiss.github.io/"
-languageCode = "en—us"
+languageCode = "de"
 title = "Netzmuffel - Alles und Nichts"
-theme = "techlog—simple"
+theme = "blank"
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 
